--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,72 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-2.59MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-554.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-180.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-270.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-789.0KB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇨🇳 中国-667.8KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
