--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,9 +6,10 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-180.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-270.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-789.0KB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇨🇳 中国-667.8KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.78MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -16,18 +17,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -35,9 +38,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -49,18 +53,20 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -68,9 +74,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -87,9 +94,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-180.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-789.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-667.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
