--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,81 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.78MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-741.5KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-1003.7KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-611.1KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: a55602c8-d3d4-4c7f-b552-875c624b899c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
+  - {name: 🇨🇳 台湾-982.3KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: 35c179df-804e-410c-8e27-299d9f2d0b6b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
+  - {name: 🇺🇸 美国-737.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-614.4KB/s(Youtube:不良林), server: us01.henet.cyou, port: 20000, type: vmess, uuid: 35c179df-804e-410c-8e27-299d9f2d0b6b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: us01.henet.cyou}}
+  - {name: 未知国家-2.92MB/s(Youtube:不良林), server: vietnam.hn15.shopvpn.net, port: 80, type: vmess, uuid: 23959a9d-be8b-45d7-b284-5a3f9f29039a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: quangtien.akamaized.net}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-741.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
+      - 未知国家-2.92MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-741.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
+      - 未知国家-2.92MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-741.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
+      - 未知国家-2.92MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-741.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
+      - 未知国家-2.92MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-741.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
+      - 未知国家-2.92MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-741.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
+      - 未知国家-2.92MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +95,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-741.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
+      - 未知国家-2.92MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
