--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-611.1KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: a55602c8-d3d4-4c7f-b552-875c624b899c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
-  - {name: 🇨🇳 台湾-982.3KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: 35c179df-804e-410c-8e27-299d9f2d0b6b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
   - {name: 🇺🇸 美国-737.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-702.2KB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
+  - {name: 🇨🇳 台湾-611.1KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: a55602c8-d3d4-4c7f-b552-875c624b899c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
+  - {name: 🇺🇸 美国-185.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-982.3KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: 35c179df-804e-410c-8e27-299d9f2d0b6b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
   - {name: 🇺🇸 美国-614.4KB/s(Youtube:不良林), server: us01.henet.cyou, port: 20000, type: vmess, uuid: 35c179df-804e-410c-8e27-299d9f2d0b6b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: us01.henet.cyou}}
   - {name: 未知国家-2.92MB/s(Youtube:不良林), server: vietnam.hn15.shopvpn.net, port: 80, type: vmess, uuid: 23959a9d-be8b-45d7-b284-5a3f9f29039a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: quangtien.akamaized.net}}
+  - {name: 🇨🇳 中国-393.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-567.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-452.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
       - 未知国家-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
       - 未知国家-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
       - 未知国家-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -54,32 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
       - 未知国家-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
       - 未知国家-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
       - 未知国家-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,11 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
       - 未知国家-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
