--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-737.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-702.2KB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
-  - {name: 🇨🇳 台湾-611.1KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: a55602c8-d3d4-4c7f-b552-875c624b899c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
-  - {name: 🇺🇸 美国-185.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.30MB/s(Youtube:不良林), server: v2jp3-ws-tls.ytv2line.top, port: 48103, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2jp3-ws-tls.ytv2line.top}}
+  - {name: 🇯🇵 日本-416.3KB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
+  - {name: 🇨🇳 台湾-175.0KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: a55602c8-d3d4-4c7f-b552-875c624b899c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
   - {name: 🇨🇳 台湾-982.3KB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: 35c179df-804e-410c-8e27-299d9f2d0b6b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
-  - {name: 🇺🇸 美国-614.4KB/s(Youtube:不良林), server: us01.henet.cyou, port: 20000, type: vmess, uuid: 35c179df-804e-410c-8e27-299d9f2d0b6b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: us01.henet.cyou}}
-  - {name: 未知国家-2.92MB/s(Youtube:不良林), server: vietnam.hn15.shopvpn.net, port: 80, type: vmess, uuid: 23959a9d-be8b-45d7-b284-5a3f9f29039a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: quangtien.akamaized.net}}
-  - {name: 🇨🇳 中国-393.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-567.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-452.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-185.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.04MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇭🇰 香港-491.4KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇸🇬 新加坡-6.57MB/s(Youtube:不良林), server: hk01.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: hk01.henet.cyou}}
+  - {name: 🇬🇧 英国-384.5KB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-175.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
-      - 未知国家-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-384.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-175.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
-      - 未知国家-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-384.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-175.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
-      - 未知国家-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-384.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-175.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-491.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-175.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
-      - 未知国家-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-384.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-175.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
-      - 未知国家-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-384.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-175.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
-      - 未知国家-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-384.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-737.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-702.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-611.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-175.0KB/s(Youtube:不良林)
       - 🇨🇳 台湾-982.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-614.4KB/s(Youtube:不良林)
-      - 未知国家-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-185.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
+      - 🇭🇰 香港-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-384.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
